<resources>
    <string name="app_name">Podplay</string>
    <string name="search_hint">Enter Podcast search</string>
    <string name="search">Search</string>
    <string name="subscribe">Subscribe</string>
    <string name="ok_btn">Okay</string>
    <string name="subscribed_podcast">Subscribed</string>
    <string name="unsubscribed">Unsubscribe</string>
    <string name="episode_notification_title">New Episodes</string>
    <string name="episode_notification_text">%1$d new episode(s) for %2$s</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="episode_thumbnail">episode thumbnail</string>
    <string name="replay_button">replay button</string>
    <string name="skip_forward">skip forward</string>
    <string name="_1x">1x</string>
    <string name="_0_00">0:00</string>
</resources>