<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    >

    <SurfaceView
        android:id="@+id/video_surface_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="invisible"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#eeeeee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/episode_image_view"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@android:drawable/ic_menu_report_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/episode_thumbnail" />

        <TextView
            android:id="@+id/episode_title_text_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text=""
            app:layout_constraintBottom_toBottomOf="@+id/episode_image_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/episode_image_view"
            app:layout_constraintTop_toTopOf="@+id/episode_image_view"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/episode_description_text_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/white"
        android:padding="8dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/player_controls"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerView"
        tools:text="Episode description"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/player_controls"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@android:color/background_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/replay_button"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_replay_10_white"
            app:layout_constraintEnd_toStartOf="@+id/play_toggle_button"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/replay_button" />

        <Button
            android:id="@+id/play_toggle_button"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_play_pause_toggle"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageButton
            android:id="@+id/forward_button"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_forward_30_white"
            app:layout_constraintStart_toEndOf="@+id/play_toggle_button"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/skip_forward" />

        <Button
            android:id="@+id/speed_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:text="@string/_1x"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/current_time_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/_0_00"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/seekBar"/>

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:progressBackgroundTint="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/end_time_text_view"
            app:layout_constraintStart_toEndOf="@+id/current_time_text_view"/>

        <TextView
            android:id="@+id/end_time_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/_0_00"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/seekBar" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
